--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,21 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+/* 3. */
+
+.list_third{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.item_third{
+  list-style:none
+}
+
+.img_third{
+  display: block;
+  max-width: 100%;
+  height: auto
+}
